--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -9,8 +9,8 @@
 
     <ImageButton
         android:id="@+id/btnMoveToItem"
-        android:layout_width="187dp"
-        android:layout_height="291dp"
+        android:layout_width="264dp"
+        android:layout_height="332dp"
         android:background="@color/white"
         android:scaleType="fitCenter"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -18,7 +18,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.643"
-        app:srcCompat="@drawable/cheesecakeicon" />
+        app:srcCompat="@drawable/imagemenu" />
 
     <Button
         android:id="@+id/btnMoveToCart"
