--- a/app/src/main/res/layout/activity_order_feedback.xml
+++ b/app/src/main/res/layout/activity_order_feedback.xml
@@ -44,7 +44,10 @@
         android:layout_width="260dp"
         android:layout_height="70dp"
         android:layout_below="@id/ratingBarFeedback"
+        android:fontFamily="@font/inter_bold"
         android:text="Submit Feedback"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
