--- a/app/src/main/res/layout/activity_order_status.xml
+++ b/app/src/main/res/layout/activity_order_status.xml
@@ -11,7 +11,7 @@
     <Button
         android:id="@+id/btnConfirmOrder"
         android:layout_width="240dp"
-        android:layout_height="66dp"
+        android:layout_height="70dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:fontFamily="@font/inter_bold"
@@ -20,15 +20,15 @@
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.508"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.765" />
+        app:layout_constraintVertical_bias="0.694" />
 
     <Button
         android:id="@+id/btnModifyOrder"
-        android:layout_width="236dp"
-        android:layout_height="71dp"
+        android:layout_width="240dp"
+        android:layout_height="70dp"
         android:layout_below="@id/btnConfirmOrder"
         android:layout_centerHorizontal="true"
         android:fontFamily="@font/inter_bold"
@@ -37,10 +37,10 @@
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.931" />
+        app:layout_constraintVertical_bias="0.815" />
 
     <TextView
         android:id="@+id/txtPickUpInfo"
@@ -78,5 +78,21 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.467"
         app:srcCompat="@drawable/orderradbtn_removebg_preview" />
+
+    <Button
+        android:id="@+id/btnCancelOrder"
+        android:layout_width="240dp"
+        android:layout_height="70dp"
+        android:backgroundTintMode="add"
+        android:fontFamily="@font/inter_bold"
+        android:text="Cancel Order"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.933" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
